# person_of_interest

./: .gitignore  README_CLEAN.md  config.yaml  download_celeba.py  mkdocs.yml  pyproject.toml  requirements.txt  run_app.py  streamlit_app.py  vector_similarity_analysis.ipynb
src/person_of_interest/: __init__.py  celebrity_search.py
